openapi-generatorを使ってroutes自動生成
